Add Raport Service

--- a/src/MUCounter/MUCNotification/appsettings.Development.json
+++ b/src/MUCounter/MUCNotification/appsettings.Development.json
@@ -6,8 +6,11 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionString": {
-    "MUCDB": "",
-    "rabbitMQ": ""
-  }
+  "SMSApi": {
+    "login": "",
+    "password": "",
+    "raportSmsNumber": ""
+  },
+  "mongoConnectionString": "",
+  "rabbitMQ": ""
 }
