--- a/src/MUCounter/MUCounter/appsettings.json
+++ b/src/MUCounter/MUCounter/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "MUCDB": "Server=tcp:mudatabaseserver.database.windows.net,1433;Initial Catalog=dbmu;Persist Security Info=False;User ID=muadmin;Password=Kowal123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "MUCDB": "",
+    "rabbitMQ": ""
   }
 }
