FIx notification service dependency injection

--- a/src/MUCounter/MUCNotification/appsettings.Development.json
+++ b/src/MUCounter/MUCNotification/appsettings.Development.json
@@ -7,10 +7,10 @@
     }
   },
   "SMSApi": {
-    "login": "",
-    "password": "",
-    "raportSmsNumber": ""
+    "login": "mozola.pawel@gmail.com",
+    "password": "a0f1dfc51a0c878bd4614f040538289a",
+    "raportSmsNumber": "883984478"
   },
-  "mongoConnectionString": "",
-  "rabbitMQ": ""
+  "mongoConnectionString": "mongodb+srv://mucnotification:Kowal123@mucuntertest-fugbh.mongodb.net/test?retryWrites=true&w=majority",
+  "rabbitMQ": "amqp://dozqsozp:X-jxJxQhG6vomYmhT8kas_zuNmPGn5Z5@dove.rmq.cloudamqp.com/dozqsozp"
 }
